Interrupt/build/log/idf_py_stdout_output_27859
[1/9] Building C object esp-idf/input_iot/CMakeFiles/__idf_input_iot.dir/src/input.c.obj
FAILED: esp-idf/input_iot/CMakeFiles/__idf_input_iot.dir/src/input.c.obj 
/home/dongkhoa/esp/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc  -I/home/dongkhoa/esp/Project/blink/build/config -I/home/dongkhoa/esp/Project/blink/components/input_iot/inc -I/home/dongkhoa/esp/esp-idf/components/newlib/platform_include -I/home/dongkhoa/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/dongkhoa/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/dongkhoa/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/dongkhoa/esp/esp-idf/components/freertos/esp_additions/include -I/home/dongkhoa/esp/esp-idf/components/esp_hw_support/include -I/home/dongkhoa/esp/esp-idf/components/esp_hw_support/include/soc -I/home/dongkhoa/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/dongkhoa/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/dongkhoa/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/dongkhoa/esp/esp-idf/components/heap/include -I/home/dongkhoa/esp/esp-idf/components/log/include -I/home/dongkhoa/esp/esp-idf/components/soc/include -I/home/dongkhoa/esp/esp-idf/components/soc/esp32/. -I/home/dongkhoa/esp/esp-idf/components/soc/esp32/include -I/home/dongkhoa/esp/esp-idf/components/hal/esp32/include -I/home/dongkhoa/esp/esp-idf/components/hal/include -I/home/dongkhoa/esp/esp-idf/components/hal/platform_port/include -I/home/dongkhoa/esp/esp-idf/components/esp_rom/include -I/home/dongkhoa/esp/esp-idf/components/esp_rom/include/esp32 -I/home/dongkhoa/esp/esp-idf/components/esp_rom/esp32 -I/home/dongkhoa/esp/esp-idf/components/esp_common/include -I/home/dongkhoa/esp/esp-idf/components/esp_system/include -I/home/dongkhoa/esp/esp-idf/components/esp_system/port/soc -I/home/dongkhoa/esp/esp-idf/components/esp_system/port/include/private -I/home/dongkhoa/esp/esp-idf/components/xtensa/include -I/home/dongkhoa/esp/esp-idf/components/xtensa/esp32/include -I/home/dongkhoa/esp/esp-idf/components/lwip/include -I/home/dongkhoa/esp/esp-idf/components/lwip/include/apps -I/home/dongkhoa/esp/esp-idf/components/lwip/include/apps/sntp -I/home/dongkhoa/esp/esp-idf/components/lwip/lwip/src/include -I/home/dongkhoa/esp/esp-idf/components/lwip/port/esp32/include -I/home/dongkhoa/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/dongkhoa/esp/esp-idf/components/driver/include -I/home/dongkhoa/esp/esp-idf/components/driver/deprecated -I/home/dongkhoa/esp/esp-idf/components/driver/esp32/include -I/home/dongkhoa/esp/esp-idf/components/esp_pm/include -I/home/dongkhoa/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/dongkhoa/esp/Project/blink=. -fmacro-prefix-map=/home/dongkhoa/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/input_iot/CMakeFiles/__idf_input_iot.dir/src/input.c.obj -MF esp-idf/input_iot/CMakeFiles/__idf_input_iot.dir/src/input.c.obj.d -o esp-idf/input_iot/CMakeFiles/__idf_input_iot.dir/src/input.c.obj -c /home/dongkhoa/esp/Project/blink/components/input_iot/src/input.c
/home/dongkhoa/esp/Project/blink/components/input_iot/src/input.c:10:23: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'gpio_input_handler'
   10 | static void IRAM_ATTR gpio_input_handler(void* arg)
      |                       ^~~~~~~~~~~~~~~~~~
/home/dongkhoa/esp/Project/blink/components/input_iot/src/input.c: In function 'INPUT_io_create':
/home/dongkhoa/esp/Project/blink/components/input_iot/src/input.c:26:36: error: 'gpio_input_handler' undeclared (first use in this function); did you mean 'gpio_isr_handle_t'?
   26 |     gpio_isr_handler_add(gpio_num, gpio_input_handler, (void *)gpio_num);
      |                                    ^~~~~~~~~~~~~~~~~~
      |                                    gpio_isr_handle_t
/home/dongkhoa/esp/Project/blink/components/input_iot/src/input.c:26:36: note: each undeclared identifier is reported only once for each function it appears in
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/dongkhoa/esp/Project/blink/build/bootloader/esp-idf/esptool_py && /home/dongkhoa/esp/python_env/idf5.0_py3.10_env/bin/python /home/dongkhoa/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/dongkhoa/esp/Project/blink/build/bootloader/bootloader.bin
Bootloader binary size 0x6710 bytes. 0x8f0 bytes (8%) free.
ninja: build stopped: subcommand failed.
